# qt-game-socoban

./: CMakeLists.txt  CMakeLists.txt.user.acfe6b3  CMakeLists.txt.user.cbb152f  README.md  blockpixmapitem.cpp  blockpixmapitem.h  config.h  gamescene.cpp  gamescene.h  loader.cpp  loader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  saverecorddialog.cpp  saverecorddialog.h  saverecorddialog.ui  tablerecordsmodel.cpp  tablerecordsmodel.h
assets/Levels/: 23x11.json
